[gd_scene load_steps=5 format=2]

[ext_resource path="res://Start.gd" type="Script" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/fonts/slkscre.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="Start" type="Node"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -64.5
margin_bottom = 64.5
custom_fonts/font = SubResource( 1 )
text = "Data loaded

Heading to your Aquarium!"
align = 1

[node name="MainTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WelcomeTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="MainTimer" to="." method="_on_MainTimer_timeout"]
[connection signal="timeout" from="WelcomeTimer" to="." method="_on_WelcomeTimer_timeout"]
